apps/app1-dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1-dev
  template:
    metadata:
      labels:
        app: app1-dev
    spec:
      containers:
      - name: app1-dev
        image: mariocalipo.jfrog.io/mariocalipo-docker-local/image-app1-dev:latest
