apps/app1-dev/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-dev
spec:
  selector:
    app: app1-dev
