apps/app1-dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-dev
spec:
  defaultBackend:
    service:
      name: app1-dev
